fix: bag on update token

--- a/.env
+++ b/.env
@@ -4,5 +4,5 @@ DB_HOST=db
 DB_PORT=5432
 DB_USER=postgres
 DB_PASSWORD=postgres
-DB_NAME=auth
+DB_NAME=auth-db
 WEBHOOK_URL="https://webhook.test-task/"
